--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,10 +2,12 @@ PORT=4000
 
 FRONTEND_URL=http://localhost:5173
 
-WISPR_API_KEY=your_wispr_api_key
+# Local Whisper model used by @xenova/transformers (downloads on first run)
+TRANSCRIBE_MODEL=Xenova/whisper-small
+TRANSCRIBE_FALLBACK_MODEL=Xenova/whisper-tiny
+TRANSCRIBE_LANGUAGE=en
+TRANSCRIBE_MAX_AUDIO_BYTES=0
 
 GEMINI_API_KEY=your_gemini_api_key
 
 N8N_WEBHOOK_URL=http://localhost:5678/webhook/voice-automation
-
-GITHUB_TOKEN=
