--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,13 @@
     "archiver": "^7.0.0",
     "@xenova/transformers": "^2.17.2",
     "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
-    "@google/generative-ai": "^0.21.0"
+    "@google/generative-ai": "^0.21.0",
+    "playwright": "^1.50.1",
+    "ws": "^8.18.0"
   }
 }
